--- a/src/page_eleven.html
+++ b/src/page_eleven.html
@@ -14,7 +14,7 @@
 <center><img class = "logo" src = "../images/logo.png" alt="logo"></center>
 <ul>
   <span onclick="transitionToLPage('page_ten.html')"><li class="arrow left" ></li></span>
-  <span onclick="transitionToRPage('index.html')"><li class="arrow right" style = "float:right"></li></span>
+  <span onclick="transitionToRPage('page_one.html')"><li class="arrow right" style = "float:right"></li></span>
   <li id="logo-title"><b>THE ALLIGATOR</b></li>
   <li id="logo-title" style="float:right"><b>FRIDAY, MARCH 4, 2022</b></li>
 </ul>
