--- a/src/page_two.html
+++ b/src/page_two.html
@@ -6,13 +6,13 @@
   <link rel = "stylesheet" href = "styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../images/logo-short.png">
-  <title>Page 4</title>
+  <title>Page 2</title>
 </head>
 <li style="float:left"><i id = "motto"> We Inform. You Decide.</i></li>
 <li style="float:right"><a href = "https://www.alligator.org/"><span style="color: black">www.alligator.org</span></a></li>
 <center><img class = "logo" src = "../images/logo.png" alt="logo"></center>
 <ul>
-  <span onclick="transitionToLPage('index.html')"><li class="arrow left" ></li></span>
+  <span onclick="transitionToLPage('page_one.html')"><li class="arrow left" ></li></span>
   <span onclick="transitionToRPage('page_three.html')"><li class="arrow right" style = "float:right"></li></span>
   <li id="logo-title"><b>THE ALLIGATOR</b></li>
   <li id="logo-title" style="float:right"><b>FRIDAY, MARCH 4, 2022</b></li>
